Bug 60596 - journalctl's incorrect command line options parsing
Summary: journalctl's incorrect command line options parsing
Status: RESOLVED FIXED
Alias: None
Product: systemd
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: systemd-bugs
QA Contact: systemd-bugs
URL:
Whiteboard:
Keywords:
: 55408 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-02-10 13:50 UTC by appzer0
Modified: 2013-02-11 23:51 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description appzer0 2013-02-10 13:50:44 UTC
appzer0@poopy:/tmp/pkg-systemd$ sudo journalctl -n 10
Failed to add match '10': Argument invalide
appzer0@poopy:/tmp/pkg-systemd$ sudo journalctl -n=10
Failed to parse lines '=10'
appzer0@poopy:/tmp/pkg-systemd$ sudo journalctl -n=1
Failed to parse lines '=1'
appzer0@poopy:/tmp/pkg-systemd$ sudo journalctl -n 1
Failed to add match '1': Argument invalide
appzer0@poopy:/tmp/pkg-systemd$ sudo journalctl -n1 # This is OK
Comment 1 Lennart Poettering 2013-02-11 22:56:21 UTC
Yeah, that's a limitation of getopt_long()'s "optional_argument" parser. Not sure how we can make this work nicely.
Comment 2 Lennart Poettering 2013-02-11 23:33:31 UTC
OK, found a nice way to deal with this, finally.

http://cgit.freedesktop.org/systemd/systemd/commit/?id=96088db02b2802049f1edbd44d5f8c2ea838f3f2
Comment 3 Lennart Poettering 2013-02-11 23:51:01 UTC
*** Bug 55408 has been marked as a duplicate of this bug. ***


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.