journalctl: allow both "-n 55" and "-n55" on the command line, as equivalent syntaxes

https://bugs.freedesktop.org/show_bug.cgi?id=60596